# vk-deviceinfo

./: CHANGELOG.md  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  release.yml
